Add lombok, bypass check certificate download file, update backend crypto